<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="?android:attr/windowBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/preference_screen_padding_bottom">

        <include layout="@layout/fragment_about_head" />

        <TextView
            android:id="@+id/about_support_category"
            style="@style/Widget.InputField.Category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/preference_group_inset"
            android:layout_marginEnd="@dimen/preference_group_inset"
            android:text="@string/about_support_category" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/preference_group_inset"
            android:layout_marginEnd="@dimen/preference_group_inset"
            android:background="@drawable/pref_group_card"
            android:clipToOutline="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/about_donate_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/list_item_bg"
                android:paddingStart="@dimen/preference_item_child_padding"
                android:paddingEnd="@dimen/preference_item_child_padding"
                android:paddingTop="@dimen/preference_item_padding_top"
                android:paddingBottom="@dimen/preference_item_padding_bottom"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:id="@+id/about_donate_title"
                    style="@style/AppTextAppearance.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_donate_title" />

                <TextView
                    android:id="@+id/about_donate_summary"
                    style="@style/AppTextAppearance.Secondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_donate_summary" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/about_paypal_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/list_item_bg"
                android:paddingStart="@dimen/preference_item_child_padding"
                android:paddingEnd="@dimen/preference_item_child_padding"
                android:paddingTop="@dimen/preference_item_padding_top"
                android:paddingBottom="@dimen/preference_item_padding_bottom"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:id="@+id/about_paypal_title"
                    style="@style/AppTextAppearance.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_paypal_title" />

                <TextView
                    android:id="@+id/about_paypal_summary"
                    style="@style/AppTextAppearance.Secondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_paypal_summary" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/preference_group_divider_height"
                android:layout_marginStart="@dimen/preference_item_child_padding"
                android:layout_marginEnd="@dimen/preference_item_child_padding"
                android:alpha="0.4"
                android:background="@color/about_divider" />

            <LinearLayout
                android:id="@+id/about_repository_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/list_item_bg"
                android:paddingStart="@dimen/preference_item_child_padding"
                android:paddingEnd="@dimen/preference_item_child_padding"
                android:paddingTop="@dimen/preference_item_padding_top"
                android:paddingBottom="@dimen/preference_item_padding_bottom"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:id="@+id/about_repository_title"
                    style="@style/AppTextAppearance.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_repository_title" />

                <TextView
                    android:id="@+id/about_repository_summary"
                    style="@style/AppTextAppearance.Secondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_repository_summary" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/preference_group_divider_height"
                android:layout_marginStart="@dimen/preference_item_child_padding"
                android:layout_marginEnd="@dimen/preference_item_child_padding"
                android:alpha="0.4"
                android:background="@color/about_divider" />

            <LinearLayout
                android:id="@+id/about_contact_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/list_item_bg"
                android:paddingStart="@dimen/preference_item_child_padding"
                android:paddingEnd="@dimen/preference_item_child_padding"
                android:paddingTop="@dimen/preference_item_padding_top"
                android:paddingBottom="@dimen/preference_item_padding_bottom"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:id="@+id/about_contact_title"
                    style="@style/AppTextAppearance.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_contact_title" />

                <TextView
                    android:id="@+id/about_contact_summary"
                    style="@style/AppTextAppearance.Secondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_contact_summary" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/about_notes_category"
            style="@style/Widget.InputField.Category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/preference_group_inset"
            android:layout_marginEnd="@dimen/preference_group_inset"
            android:text="@string/about_notes_category" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/preference_group_inset"
            android:layout_marginEnd="@dimen/preference_group_inset"
            android:background="@drawable/pref_group_card"
            android:clipToOutline="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/about_restart_notes_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/preference_item_child_padding"
                android:paddingEnd="@dimen/preference_item_child_padding"
                android:paddingTop="@dimen/preference_item_padding_top"
                android:paddingBottom="@dimen/preference_item_padding_bottom">

                <TextView
                    android:id="@+id/about_restart_notes_title"
                    style="@style/AppTextAppearance.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_restart_notes_title" />

                <TextView
                    android:id="@+id/about_restart_notes_summary"
                    style="@style/AppTextAppearance.Secondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_dynamic" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/preference_group_divider_height"
                android:layout_marginStart="@dimen/preference_item_child_padding"
                android:layout_marginEnd="@dimen/preference_item_child_padding"
                android:alpha="0.4"
                android:background="@color/about_divider" />

            <LinearLayout
                android:id="@+id/about_compatibility_notes_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/preference_item_child_padding"
                android:paddingEnd="@dimen/preference_item_child_padding"
                android:paddingTop="@dimen/preference_item_padding_top"
                android:paddingBottom="@dimen/preference_item_padding_bottom">

                <TextView
                    android:id="@+id/about_compatibility_notes_title"
                    style="@style/AppTextAppearance.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_compatibility_notes_title" />

                <TextView
                    android:id="@+id/about_compatibility_notes_summary"
                    style="@style/AppTextAppearance.Secondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_unsupported" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
